tests/baselines/reference/nestedBlockScopedBindings8.errors.txt
tests/cases/compiler/nestedBlockScopedBindings8.ts(3,5): error TS7027: Unreachable code detected.
tests/cases/compiler/nestedBlockScopedBindings8.ts(8,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/nestedBlockScopedBindings8.ts (2 errors) ====
    var x;
    for (let x; false; ) {
        () => x;
        ~
!!! error TS7027: Unreachable code detected.
    }
    
    var y;
    for (let y; false; ) {
        y = 1;
        ~
!!! error TS7027: Unreachable code detected.
    }